Generate documentation website at e8ae6f6

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         data-chapter-title="Introduction"
         data-filepath="README.md"
         data-basepath="."
-        data-revision="Thu Apr 07 2016 08:21:55 GMT+0000 (UTC)"
+        data-revision="Thu Apr 07 2016 09:37:12 GMT+0000 (UTC)"
         data-innerlanguage="">
     
 
@@ -169,6 +169,24 @@ through communities of hackers. It can be used for edge computing, datacenter,
 low cost Telecom solutions, SMB or corporate customers. Use cases are still under
 heavy investigation and raised by our daily expanding community as this
 breakthrough technology is able to get the cloud back outside !</p>
+<h2 id="contribute">Contribute</h2>
+<p>Anyone can contribute to this documenation and any kind of contribution is welcome. Feel free to submit pull
+requests and issues.</p>
+<p>Documentation structure is very simple to understand. It&apos;s basically a collection of markdown documents. We
+use <a href="https://www.gitbook.com" target="_blank">Gitbook</a> to generate the documentation website and the master branch is
+automatically deployed on <a href="http://ruggedpod.github.io/ruggedpod-doc" target="_blank">ruggedpod.github.io/ruggedpod-doc</a> when updated.</p>
+<p>You can easily build the website locally using <a href="https://github.com/GitbookIO/gitbook-cli" target="_blank">Gitbook CLI</a> on
+you computer. First you need <a href="https://www.npmjs.com/" target="_blank">npm</a>, the javascript package manager in order to
+install Gitbook.</p>
+<p>Then intall the gitbook CLI</p>
+<pre><code class="lang-bash">$ npm install -g gitbook-cli
+</code></pre>
+<p>Now you are ready to generate the documentation website. You can either run a server locally</p>
+<pre><code class="lang-bash">$ gitbook serve
+</code></pre>
+<p>or generate a static HTML website</p>
+<pre><code class="lang-bash">$ gitbook build
+</code></pre>
 
                     
                     </section>
